--- a/WiredBrainCoffee.MinApi/Properties/launchSettings.json
+++ b/WiredBrainCoffee.MinApi/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:37265",
-      "sslPort": 44355
+      "applicationUrl": "http://localhost:63182",
+      "sslPort": 44395
     }
   },
   "profiles": {
-    "WiredBrainCofffee.MinAPI": {
+    "WiredBrainCoffee.MinApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7168;http://localhost:5168",
+      "applicationUrl": "https://localhost:7289;http://localhost:5289",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
