--- a/WiredBrainCoffee.UI/Properties/launchSettings.json
+++ b/WiredBrainCoffee.UI/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:9991;http://localhost:9992",
+      "applicationUrl": "http://0.0.0.0:5000/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
