--- a/WiredBrainCoffee.MinApi/Properties/launchSettings.json
+++ b/WiredBrainCoffee.MinApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7289;http://localhost:5289",
+      "applicationUrl": "http://0.0.0.0:7000/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
