--- a/WiredBrainCoffee.API/Properties/launchSettings.json
+++ b/WiredBrainCoffee.API/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7024;http://localhost:5024",
+      "applicationUrl": "http://0.0.0.0:5500/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
